# learn-deep-learning

./: .gitignore  AGENTS.md  Readme.md  docker-compose.yaml  main.py  pyproject.toml
gpt/: Readme.md  data.py  model.py  pyproject.toml  train.py
handwritten-digit-classifier/: Objective.md  README.md  data.py  eval.py  inference.py  model.py  pyproject.toml  train.py
handwritten-digit-classifier/models/: digit_classifier.pt
sentiment-classifier/: Objective.md  Readme.md  data.py  evaluate.py  inference.py  model.py  pyproject.toml  train.py
sentiment-classifier/outputs/: sentiment_predictions.txt
