[project]
name = "learn-deep-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=5.0.0",
]

[tool.uv.workspace]
members = [
    "*/",
    "handwritten-digit-classifier",
    "sentiment-classifier",
    "gpt",
]
exclude = [".venv", ".git"]
